# pyrializer

./: .editorconfig  README.md  pyproject.toml
pyrializer/: __init__.py  decode.py  encode.py  exceptions.py  util.py
pyrializer/types/: __init__.py  builtin.py
tests/pyrializer/: decode_test.py  decorator_test.py  encode_test.py
tests/pyrializer/types/: augment_test.py  bool_test.py  float_test.py  int_test.py  str_test.py
tests/pyrializer/util/: get_array_type_test.py  get_class_fields_test.py  get_list_type_test.py
