[tool.poetry]
name = "pyrializer"
version = "0.1.0"
description = "A Python object (de)serializer"
authors = ["Alfonso Ruzafa <alfonso.ruzafa@movo.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-mock = "^2.0.0"
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
